首字母小写

--- a/index.html
+++ b/index.html
@@ -156,19 +156,19 @@
 		</div>
 		<!-- 四个引导 -->
 		<!-- 歌单推荐 -->
-		<div id="Playlist-recommend" class="Playlist-container">
-			<div class="Playlist-banner container ">
+		<div id="playlist-recommend" class="playlist-container">
+			<div class="playlist-banner container ">
 				<!-- 头部文字 -->
-				<div class="Playlist-banner-top">
-					<ul class="Playlist-top-text">
-						<li class="Playlist-text-left">歌单推荐</li>
-						<li class="Playlist-text-right">更多</li>
+				<div class="playlist-banner-top">
+					<ul class="playlist-top-text">
+						<li class="playlist-text-left">歌单推荐</li>
+						<li class="playlist-text-right">更多</li>
 					</ul>
 				</div>
 				<!-- 头部文字 -->
 				<!-- 下部图片框 -->
-				<div class="Playlist-banner-imgs">
-					<div class="Playlist-imgs-left">
+				<div class="playlist-banner-imgs">
+					<div class="playlist-imgs-left">
 						<ul>
 							<li>
 								<a href="login.html">
@@ -178,8 +178,8 @@
 						</ul>
 						
 					</div>
-					<div class="Playlist-imgs-right">
-						<div class="Playlist-imgs item1">
+					<div class="playlist-imgs-right">
+						<div class="playlist-imgs item1">
 							<ul>
 								<li>
 									<a>
@@ -188,15 +188,15 @@
 								</li>
 							</ul>
 						</div>
-						<div class="Playlist-imgs item2"></div>
-						<div class="Playlist-imgs item3"></div>
-						<div class="Playlist-imgs item4"></div>
-						<div class="Playlist-imgs item5"></div>
-						<div class="Playlist-imgs item6"></div>
-						<div class="Playlist-imgs item7"></div>
-						<div class="Playlist-imgs item8"></div>
-						<div class="Playlist-imgs item9"></div>
-						<div class="Playlist-imgs item10"></div>
+						<div class="playlist-imgs item2"></div>
+						<div class="playlist-imgs item3"></div>
+						<div class="playlist-imgs item4"></div>
+						<div class="playlist-imgs item5"></div>
+						<div class="playlist-imgs item6"></div>
+						<div class="playlist-imgs item7"></div>
+						<div class="playlist-imgs item8"></div>
+						<div class="playlist-imgs item9"></div>
+						<div class="playlist-imgs item10"></div>
 					</div>
 
 				</div>
