一些适配修改

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		</main>
 		<!-- 轮播图 -->
 		<!-- 四个引导 -->
-		<div id="find-banner" class="find-container">
+		<div id="find-banner" class="find-container container">
 			<!-- 中间四个图片框 -->
 			<ul class="find-container-item">
 				<li class="find-item item1">
@@ -156,7 +156,7 @@
 		</div>
 		<!-- 四个引导 -->
 		<!-- 歌单推荐 -->
-		<div id="playlist-recommend" class="playlist-container">
+		<div id="playlist-recommend" class="playlist-container container">
 			<div class="playlist-banner container ">
 				<!-- 头部文字 -->
 				<div class="playlist-banner-top">
@@ -169,14 +169,9 @@
 				<!-- 下部图片框 -->
 				<div class="playlist-banner-imgs">
 					<div class="playlist-imgs-left">
-						<ul>
-							<li>
-								<a href="login.html">
-									<img />
-								</a>
-							</li>
-						</ul>
-						
+						<img src="../img/playlist-recommend/lf2.png" alt=""/>
+						<a href="login.html">
+						</a>
 					</div>
 					<div class="playlist-imgs-right">
 						<div class="playlist-imgs item1">
